--- a/jeuxstyle.css
+++ b/jeuxstyle.css
@@ -12,10 +12,9 @@ canvas {
   border: 4px solid #ff69b4;
   box-shadow: 0 0 20px #000;
   display: block;
-  width: 100vw;
-  height: 100vh;
-}
-
+  max-width: 90vw;
+  max-height: 60vh;
+  margin: 0 auto;
 }
 
 #canvasWrapper {
@@ -166,3 +165,4 @@ canvas {
     width: 90vw;
   }
 }
+
