--- a/jeuxstyle.css
+++ b/jeuxstyle.css
@@ -14,8 +14,9 @@ canvas {
   display: block;
   margin: 0;
   width: 100%;
-  max-width: 1000px;
+  max-width: 1100px;
   height: auto;
+  flew-grow: 1;
 }
 
 #canvasWrapper {
@@ -160,4 +161,5 @@ canvas {
     align-items: flex-start;
   }
 }
+
 
