--- a/jeuxstyle.css
+++ b/jeuxstyle.css
@@ -113,7 +113,7 @@ canvas {
 }
 
 #gameContainer {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -222,6 +222,7 @@ canvas {
     padding: 2px 6px;
   }
 }
+
 
 
 
