--- a/jeuxstyle.css
+++ b/jeuxstyle.css
@@ -116,7 +116,7 @@ canvas {
   min-height: 100dvh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 20px 0;
   width: 100%;
@@ -222,6 +222,7 @@ canvas {
     padding: 2px 6px;
   }
 }
+
 
 
 
