--- a/jeuxstyle.css
+++ b/jeuxstyle.css
@@ -189,20 +189,22 @@ canvas {
   width: 100%;
   padding: 8px 0;
   border-bottom: 2px solid #00ffcc;
-    font-size: 40px;
+  font-size: 70px;
 }
 
   #canvasWrapper {
   flex-grow: 1;
-  width: 100%;
+  width: 100vdh;
+  height: 100vdh:
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
   canvas {
-  height: 100%;
-  max-height: 100%;
+  height: 100vdh;
+  max-height: 100vdh;
+  width: auto;
   aspect-ratio: 4 / 3;
   border: 4px solid #ff69b4;
   box-shadow: 0 0 20px #000;
@@ -211,7 +213,7 @@ canvas {
   #scoreTopBar {
   width: 100%;
   text-align: center;
-  font-size: 40px;
+  font-size: 70px;
   padding: 12px;
   border-bottom: 2px solid #00ffcc;
 }
@@ -219,7 +221,7 @@ canvas {
   #restartButton {
   margin: 12px auto;
   display: block;
-  font-size: 22px;
+  font-size: 40px;
   padding: 8px 16px;
   background-color: #ff69b4;
   color: #fff;
@@ -230,10 +232,11 @@ canvas {
 }
 
 #scoreList li {
-  font-size: 40px;
+  font-size: 70px;
   padding: 4px 8px;
   background: #222;
   border-left: 4px solid #ff00ff;
   }
 }
+
 
