--- a/jeuxstyle.css
+++ b/jeuxstyle.css
@@ -15,7 +15,7 @@ canvas {
   margin: 0 auto;
   width: 100%;
   max-width: 100%;
-  height: auto;
+  height: 100dvh;
   z-index: 2;
   position: relative;
 }
@@ -35,7 +35,7 @@ canvas {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vdh;
+  height: 100dvh;
   pointer-events: none;
   background-image: repeating-linear-gradient(
     to bottom,
@@ -236,6 +236,7 @@ canvas {
   border-left: 4px solid #ff00ff;
   }
 }
+
 
 
 
