--- a/jeuxstyle.css
+++ b/jeuxstyle.css
@@ -153,7 +153,7 @@ canvas {
   font-family: 'VT323', monospace;
   font-size: 70px;
   padding: 20px 40px;
-  margin-top: 32px auto;
+  margin: 32px auto 0 auto;
   background-color: #ff69b4;
   color: #fff;
   border: 4px solid #fff;
@@ -162,6 +162,7 @@ canvas {
   text-shadow: 0 0 2px #fff;
   animation: pulseArcade 1.2s infinite;
   position: relative;
+  display: block;
   z-index: 20;
 }
 
@@ -257,5 +258,6 @@ canvas {
     opacity: 0;
   }
 }
+
 
 
