--- a/jeuxstyle.css
+++ b/jeuxstyle.css
@@ -6,6 +6,7 @@ body {
   color: #fff;
   width: 100vw;
   height: 100dvh;
+  overflow: hidden;
 }
 
 canvas {
@@ -16,6 +17,7 @@ canvas {
   width: 100%;
   max-width: 100%;
   height: calc(100dvh - 120px); /* ou ajusté selon ton layout */
+  max-height: 100%;
   z-index: 2;
   position: relative;
   touch-action: manipulation;
@@ -154,7 +156,7 @@ canvas {
 
 #restartButton {
   font-family: 'VT323', monospace;
-  font-size: 5vw;
+  font-size: 8vw;
   padding: 20px 40px;
   margin: 32px auto 0 auto;
   background-color: #ff69b4;
@@ -265,6 +267,7 @@ canvas {
     opacity: 0;
   }
 }
+
 
 
 
